# blessed-widgets

./: .flake8  LICENSE  README.md  app.py  blessed_extension.py  index.md  pyproject.toml
ascii_examples/: example1.txt
ascii_gui/: ascii_gui_elements.txt  example.txt
blessed_widgets/: helpers.py  widgets.py
examples/: SoundRecognition.py  example.py  frames_and_buttons.py  key_event_test.py  simple.py  sound_recognition.py
examples/resources/: sound_recognition_data.json
shared/: settings.json
src/: SoundRecognition.py  blessed_extension.py  constants.py  example.py  example2.py  example_old.py  exceptions.py  helpers.py  simple.py  simple_example.py  sound_recognition_data.json  test.py  widgets.py
